Refine team cards: taller aspect ratio, larger photos, better typography

--- a/team.html
+++ b/team.html
@@ -56,10 +56,13 @@
                         <h3 class="folder-bio-header">About Asa</h3>
                         <p class="folder-bio-text">I've spent years building real skills across 3D art,
                             photography/videography, web development, and automation—shipping game assets with 40K+
-                            downloads, deploying production AI systems, and managing complete creative workflows. I
-                            understand the strategy and architecture behind every project, not just the tools. Now I
-                            leverage AI to accelerate execution without sacrificing the craftsmanship and intentionality
-                            that separates real work from generic output.</p>
+                            downloads.</p>
+                        <div class="spacer-xs"></div>
+                        <p class="folder-bio-text">I've deployed production AI systems and manage complete creative
+                            workflows. I understand the strategy and architecture behind every project, not just the
+                            tools.
+                            Now I leverage AI to accelerate execution without sacrificing the craftsmanship and
+                            intentionality that separates real work from generic output.</p>
                     </div>
                 </div>
 
