Fix Services CTA alignment and Team card text overflow

--- a/services.html
+++ b/services.html
@@ -49,13 +49,15 @@
             Modern, mobile-friendly sites built with real craft — not templates. Whether you're starting fresh or need a
             site that finally reflects what you do, we build digital presences that convert.
         </p>
-        <div class="hero-badge">
-            <span class="badge-icon">◆</span>
-            <span>Portfolio Pricing — First 10 Clients Only</span>
-        </div>
-        <div class="spots-counter">
-            <span class="spots-number">9</span>
-            <span class="spots-text">of 10 spots remaining</span>
+        <div class="hero-cta-group">
+            <div class="hero-badge">
+                <span class="badge-icon">◆</span>
+                <span>Portfolio Pricing — First 10 Clients Only</span>
+            </div>
+            <div class="spots-counter">
+                <span class="spots-number">9</span>
+                <span class="spots-text">of 10 spots remaining</span>
+            </div>
         </div>
     </header>
 
