feat: Update all Discord links with the correct invite URL.

--- a/team.html
+++ b/team.html
@@ -117,7 +117,7 @@
             <p class="community-description">Whether you're looking for a partner or want to join the team, let's talk.
             </p>
             <div class="hero-ctas">
-                <a href="#" class="btn btn-primary">Join the Discord</a>
+                <a href="https://discord.gg/XPNaVvCxXm" class="btn btn-primary">Join the Discord</a>
                 <a href="mailto:asa@citadelcreative.xyz" class="btn btn-secondary">Get in Touch</a>
             </div>
         </div>
@@ -131,7 +131,7 @@
         </div>
         <div class="footer-links">
             <a href="index.html">Home</a>
-            <a href="#" id="discord-link">Discord</a>
+            <a href="https://discord.gg/XPNaVvCxXm" id="discord-link">Discord</a>
             <a href="mailto:asa@citadelcreative.xyz">Contact</a>
         </div>
     </footer>
